<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_16dp"
    tools:context=".activities.ListExerciseActivity"
    android:orientation="vertical">
    <TextView
        android:id="@+id/txtCategoryName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/category_name"
        android:textSize="@dimen/fs_24"
        android:gravity="center_vertical"
        android:layout_marginBottom="@dimen/_16dp"
        android:layout_weight="0.5"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/workouts"
            android:textSize="@dimen/_16dp"></TextView>
        <TextView
            android:id="@+id/txtWorkouts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textSize="@dimen/_16dp"
            android:layout_marginStart="@dimen/_8dp"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seconds"
            android:textSize="@dimen/_16dp"
            android:layout_marginStart="@dimen/_32dp"></TextView>
        <TextView
            android:id="@+id/txtMinutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textSize="@dimen/_16dp"
            android:layout_marginStart="@dimen/_8dp"></TextView>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/desc"
        android:textSize="@dimen/_16dp"></TextView>
    <ListView
        android:id="@+id/lvExercise"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6.5"
        android:layout_marginBottom="@dimen/_16dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/btnStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/fs_20"
            android:text="@string/start"
            />


    </LinearLayout>
</LinearLayout>