<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ResultExerciseActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_64dp"
        android:layout_weight="0.5"
        android:text="YOU ROCK!"
        android:textAlignment="center"
        android:textSize="@dimen/_32dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/_50dp"
                android:src="@drawable/baseline_electric_bolt_24"
                android:layout_weight="1"
                ></ImageView>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/_50dp"
                android:layout_weight="1"
                android:src="@drawable/baseline_local_fire_department_24"
                ></ImageView>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/_50dp"
                android:layout_weight="1"
                android:src="@drawable/baseline_timer_24"></ImageView>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginVertical="@dimen/_8dp">

        <TextView
            android:id="@+id/txtTotalExercises"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/_28sp">
        </TextView>
        <TextView
            android:id="@+id/txtTotalCalories"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/_28sp">
        </TextView>

        <TextView
            android:id="@+id/txtTotalTimes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/_28sp"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/workouts"
            android:gravity="center"
            ></TextView>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calories"
            android:gravity="center">
        </TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/times"
            android:gravity="center">
        </TextView>


    </LinearLayout>
    <Button
        android:id="@+id/btnFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:textSize="@dimen/tSize16"
        android:padding="@dimen/pad15"
        android:layout_gravity="center"
        android:backgroundTint="#afea0d"
        android:textColor="@color/black"
        android:layout_marginVertical="@dimen/_32dp"/>
</LinearLayout>