<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AppDrawerActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_account_img"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lbName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/fullname"
        android:enabled="false"
        android:textSize="@dimen/fs_20"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/lbHeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="Height"
        android:textSize="@dimen/fs_20"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/lbWeight"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/lbWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="Weight"
        android:textSize="@dimen/fs_20"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/lbBMI"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbHeight"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/lbBMI"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:textSize="@dimen/fs_20"
        android:textColor="@color/black"
        android:text="@string/bmi"
        app:layout_constraintBottom_toTopOf="@+id/lbConclude"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbWeight"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/lbConclude"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:textSize="@dimen/fs_20"
        android:textColor="@color/black"
        android:text="@string/conclude"
        app:layout_constraintBottom_toTopOf="@+id/lbTarget"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbBMI"
        app:layout_constraintVertical_bias="0.5" />


    <TextView
        android:id="@+id/lbTarget"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/target"
        android:textSize="@dimen/fs_20"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbConclude"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/tvHeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/data"
        android:enabled="false"
        android:textSize="@dimen/fs_20"
        android:textColor="@color/textData"
        android:layout_marginHorizontal="20dp"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/lbHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/lbHeight" />

    <EditText
        android:id="@+id/tvWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/data"
        android:textSize="@dimen/fs_20"
        android:textColor="@color/textData"
        android:enabled="false"

        android:layout_marginHorizontal="20dp"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/lbWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lbWeight"
        app:layout_constraintTop_toTopOf="@+id/lbWeight" />
    <TextView
        android:id="@+id/tvBMI"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/data"
        android:layout_marginHorizontal="20dp"
        android:textSize="@dimen/fs_20"
        android:textColor="@color/textData"
        app:layout_constraintBottom_toBottomOf="@+id/lbBMI"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lbBMI"
        app:layout_constraintTop_toTopOf="@+id/lbBMI" />
    <TextView
        android:id="@+id/tvConclude"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/data"
        android:textSize="@dimen/fs_20"
        android:textColor="@color/textData"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/lbConclude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lbConclude"
        app:layout_constraintTop_toTopOf="@+id/lbConclude" />
    />

    <TextView
        android:id="@+id/tvTarget"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/data"
        android:layout_marginHorizontal="20dp"
        android:textSize="@dimen/fs_20"
        android:textColor="@color/textData"
        app:layout_constraintBottom_toBottomOf="@+id/lbTarget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lbTarget"
        app:layout_constraintTop_toTopOf="@+id/lbTarget" />
    <Button
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#afea0d"
        android:padding="15dp"
        android:text="@string/edit_profile"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnLogout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />
    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#afea0d"
        android:padding="15dp"
        android:text="Submit"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnLogout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#ca1e1e"
        android:padding="15dp"
        android:text="Delete Account"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnEdit"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />
</androidx.constraintlayout.widget.ConstraintLayout>